# overseer

./: .gitignore  .oxlintrc.json  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  SCRATCHPAD.md  index.html  models.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
crates/overseer-core/: Cargo.toml
crates/overseer-core/examples/: overdrive_run.rs  overdrive_spike.rs
crates/overseer-core/src/: config.rs  context.rs  event_bus.rs  lib.rs  logging.rs  paths.rs  shell.rs  skills.rs  spawn.rs  test_support.rs  usage.rs
crates/overseer-core/src/agents/: event.rs  mod.rs  turn.rs
crates/overseer-core/src/agents/claude/: mod.rs  parser.rs  spawn.rs  types.rs
crates/overseer-core/src/agents/codex/: mod.rs  parser.rs  spawn.rs  types.rs
crates/overseer-core/src/agents/copilot/: mod.rs  parser.rs  spawn.rs  types.rs
crates/overseer-core/src/agents/gemini/: mod.rs  parser.rs  spawn.rs  types.rs
crates/overseer-core/src/agents/opencode/: mod.rs  parser.rs  spawn.rs  types.rs
crates/overseer-core/src/agents/pi/: mod.rs  models.rs  parser.rs  spawn.rs
crates/overseer-core/src/approval/: command_parser.rs  context.rs  mod.rs  safe_commands.rs
crates/overseer-core/src/git/: branch.rs  diff.rs  merge.rs  mod.rs  worktree.rs
crates/overseer-core/src/managers/: approvals.rs  chat_session.rs  claude_agent.rs  codex_agent.rs  copilot_agent.rs  gemini_agent.rs  mod.rs  opencode_agent.rs  pi_agent.rs  pty.rs
crates/overseer-core/src/overdrive/: engine.rs  harness.rs  iterator.rs  log.rs  manager.rs  mod.rs  run.rs
crates/overseer-core/src/overseer_actions/: mod.rs
crates/overseer-core/src/persistence/: approvals.rs  chat.rs  chat_jsonl.rs  index.rs  mod.rs  projects.rs  tasks.rs  types.rs
crates/overseer-core/src/session/: manager.rs  mod.rs  state.rs
crates/overseer-daemon/: Cargo.toml  build.rs
crates/overseer-daemon/src/: main.rs
crates/overseer-http/: Cargo.toml
crates/overseer-http/src/: auth.rs  lib.rs  routes.rs  state.rs  websocket.rs
design/: overseer_icon_rounded.icns  (+1 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/overseer-core/: Cargo.toml
src-tauri/crates/overseer-core/src/agents/: event.rs  turn.rs
src-tauri/crates/overseer-core/src/approval/: command_parser.rs  context.rs  mod.rs  safe_commands.rs
src-tauri/crates/overseer-core/src/overseer_actions/: mod.rs
src-tauri/crates/overseer-core/src/persistence/: mod.rs
src-tauri/crates/overseer-core/src/session/: manager.rs  state.rs
src-tauri/icons/: icon.icns
src-tauri/src/: approvals.rs  chat_session.rs  git.rs  lib.rs  logging.rs  overdrive.rs  persistence.rs  pty.rs  skills.rs
src-tauri/src/agents/: claude.rs  codex.rs  copilot.rs  gemini.rs  mod.rs  opencode.rs  pi.rs  shared.rs
src-tauri/src/http_server/: auth.rs  mod.rs  routes.rs  state.rs  websocket.rs
(+292 files in other folders)
