[package]
name = "overseer-http"
version = "0.1.0"
edition = "2021"

[dependencies]
overseer-core = { path = "../overseer-core" }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "net"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
ignore = "0.4"
